# rust-lists-exercise

./: Cargo.toml  README.md
src/: bad_stack.rs  main.rs  ok_stack.rs  stack.rs
src/lib/: bad_deque.rs  bad_stack.rs  lib.rs  ok_stack.rs  persistence_list.rs
