[package]
name = "rust-lists-exercise"
version = "0.1.0"
authors = ["MathxH Chen <brainfvck@foxmail.com>"]
edition = "2018"

[lib]
name = "mylist"
crate-type = ["dylib", "rlib", "staticlib"]
path = "src/lib/lib.rs"

[[bin]]
name = "mybin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
